try to commit the first change

--- a/firstProjectAVD.ipynb
+++ b/firstProjectAVD.ipynb
@@ -21,7 +21,8 @@
     "# import the library for the work\n",
     "from sklearn import datasets\n",
     "import numpy\n",
-    "import  matplotlib.pyplot"
+    "import  matplotlib.pyplot\n",
+    "# i modify here"
    ],
    "metadata": {
     "collapsed": false
