--- a/firstProjectAVD.ipynb
+++ b/firstProjectAVD.ipynb
@@ -22,7 +22,7 @@
     "from sklearn import datasets\n",
     "import numpy\n",
     "import  matplotlib.pyplot\n",
-    "# i modify here"
+    "# i modify here?"
    ],
    "metadata": {
     "collapsed": false
